--- a/notebooks/check_videos.ipynb
+++ b/notebooks/check_videos.ipynb
@@ -9,7 +9,7 @@
     "This notebook allows you to **quickly preview some frames per video on an HPC** without downloading them locally. \n",
     "\n",
     "**Features:**\n",
-    "- Supports `.mp4` and `.avi` videos.\n",
+    "- Recursively looks for `.mp4` and `.avi` files within the chosen folder.\n",
     "- Samples **5 evenly spaced frames** per video.\n",
     "- Displays **parent_folder/video_file_name** as the figure title.\n",
     "- Paginated preview: shows **10 videos at a time** with Next/Previous buttons.\n",
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "777b42440f0b462a9fd2937faf4aeeb8",
+       "model_id": "114f41e6617b4880a39f22cfbb47931e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='/projects/kumar-lab/nguyetu/SING-grant/notebooks', filename='', title='<b>Select Video Direc…"
+       "FileChooser(path='/projects/kumar-lab/nguyetu/OFA_analysis/notebooks', filename='', title='<b>Select Video Dir…"
       ]
      },
      "metadata": {},
@@ -45,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3adee1b63aa1486ea75f912916c47ee7",
+       "model_id": "dc8230c165e740bb9e1f448b38423655",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2428e4fd09634f2389803e5dd3ef8d67",
+       "model_id": "c8ec371e5c454c358d7c9e7268e167db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,14 +158,16 @@
     "btn_next.on_click(on_next)\n",
     "\n",
     "# --- Initialize video list when folder is chosen ---\n",
-    "def load_videos(change):\n",
+    "def load_videos(_chooser=None):\n",
     "    \"\"\"\n",
-    "    Load videos from the selected folder.\n",
-    "    Supports .mp4 and .avi files. Resets pagination to the first page.\n",
+    "    Load videos from the selected folder using ipyfilechooser.\n",
+    "    Works with register_callback from ipyfilechooser.\n",
     "    \"\"\"\n",
     "    global videos, page_index\n",
-    "    folder = Path(chooser.selected_path)\n",
-    "    if folder.exists():\n",
+    "    folder_path = chooser.selected_path  # use chooser.selected_path\n",
+    "    folder = Path(folder_path).expanduser()\n",
+    "    \n",
+    "    if folder.exists() and folder.is_dir():\n",
     "        videos = sorted(list(folder.rglob(\"*.mp4\")) + list(folder.rglob(\"*.avi\")))\n",
     "        page_index = 0\n",
     "        if not videos:\n",
@@ -174,6 +176,10 @@
     "                print(f\"⚠️ No .mp4 or .avi files found in {folder}\")\n",
     "        else:\n",
     "            update_page()\n",
+    "    else:\n",
+    "        with output:\n",
+    "            clear_output()\n",
+    "            print(f\"❌ Directory not found: {folder}\")\n",
     "\n",
     "chooser.register_callback(load_videos)"
    ]
