--- a/notebooks/check_videos.ipynb
+++ b/notebooks/check_videos.ipynb
@@ -24,14 +24,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at all videos within folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "114f41e6617b4880a39f22cfbb47931e",
+       "model_id": "c99dda708ce0459eb28f1acd2beaab4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc8230c165e740bb9e1f448b38423655",
+       "model_id": "703358ade62a44158ca515a5c1432e38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8ec371e5c454c358d7c9e7268e167db",
+       "model_id": "84e5809455884e6b8755172970b8fb33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,6 +190,325 @@
     "\n",
     "chooser.register_callback(load_videos)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Screen for \"likely empty\" videos\n",
+    "\n",
+    "Subtract the intensity of the last 4 with the first frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtract_first_frame(frames):\n",
+    "    \"\"\"Subtract the first frame from all subsequent ones.\"\"\"\n",
+    "    if len(frames) < 2:\n",
+    "        return []\n",
+    "    base = frames[0][1].astype(np.int16)\n",
+    "    return [(idx, cv2.absdiff(img.astype(np.int16), base).astype(np.uint8)) for idx, img in frames[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames = sample_frames(\"/projects/kumar-lab/nguyetu/SING-grant/videos/2025-08-20/100622_Male_B6J.avi\", n_frames=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.int64(30196),\n",
+       "  array([[[16, 16, 16],\n",
+       "          [17, 17, 17],\n",
+       "          [18, 18, 18],\n",
+       "          ...,\n",
+       "          [21, 21, 21],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20]],\n",
+       "  \n",
+       "         [[18, 18, 18],\n",
+       "          [17, 17, 17],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [18, 18, 18],\n",
+       "          [18, 18, 18]],\n",
+       "  \n",
+       "         [[17, 17, 17],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [18, 18, 18],\n",
+       "          [19, 19, 19],\n",
+       "          [19, 19, 19]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[12, 12, 12],\n",
+       "          [12, 12, 12],\n",
+       "          [22, 22, 22],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16]],\n",
+       "  \n",
+       "         [[14, 14, 14],\n",
+       "          [15, 15, 15],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [21, 21, 21],\n",
+       "          [19, 19, 19],\n",
+       "          [14, 14, 14]],\n",
+       "  \n",
+       "         [[20, 20, 20],\n",
+       "          [19, 19, 19],\n",
+       "          [15, 15, 15],\n",
+       "          ...,\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16],\n",
+       "          [14, 14, 14]]], shape=(480, 480, 3), dtype=uint8)),\n",
+       " (np.int64(60393),\n",
+       "  array([[[16, 16, 16],\n",
+       "          [17, 17, 17],\n",
+       "          [18, 18, 18],\n",
+       "          ...,\n",
+       "          [21, 21, 21],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20]],\n",
+       "  \n",
+       "         [[17, 17, 17],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [18, 18, 18],\n",
+       "          [18, 18, 18]],\n",
+       "  \n",
+       "         [[16, 16, 16],\n",
+       "          [15, 15, 15],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [18, 18, 18],\n",
+       "          [19, 19, 19],\n",
+       "          [19, 19, 19]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[12, 12, 12],\n",
+       "          [12, 12, 12],\n",
+       "          [22, 22, 22],\n",
+       "          ...,\n",
+       "          [14, 14, 14],\n",
+       "          [14, 14, 14],\n",
+       "          [15, 15, 15]],\n",
+       "  \n",
+       "         [[14, 14, 14],\n",
+       "          [15, 15, 15],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [19, 19, 19],\n",
+       "          [18, 18, 18],\n",
+       "          [13, 13, 13]],\n",
+       "  \n",
+       "         [[20, 20, 20],\n",
+       "          [19, 19, 19],\n",
+       "          [15, 15, 15],\n",
+       "          ...,\n",
+       "          [13, 13, 13],\n",
+       "          [14, 14, 14],\n",
+       "          [13, 13, 13]]], shape=(480, 480, 3), dtype=uint8)),\n",
+       " (np.int64(90589),\n",
+       "  array([[[16, 16, 16],\n",
+       "          [17, 17, 17],\n",
+       "          [18, 18, 18],\n",
+       "          ...,\n",
+       "          [18, 18, 18],\n",
+       "          [13, 13, 13],\n",
+       "          [17, 17, 17]],\n",
+       "  \n",
+       "         [[18, 18, 18],\n",
+       "          [17, 17, 17],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [13, 13, 13],\n",
+       "          [15, 15, 15],\n",
+       "          [15, 15, 15]],\n",
+       "  \n",
+       "         [[17, 17, 17],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16],\n",
+       "          [16, 16, 16]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[13, 13, 13],\n",
+       "          [13, 13, 13],\n",
+       "          [23, 23, 23],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16]],\n",
+       "  \n",
+       "         [[14, 14, 14],\n",
+       "          [15, 15, 15],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [21, 21, 21],\n",
+       "          [19, 19, 19],\n",
+       "          [14, 14, 14]],\n",
+       "  \n",
+       "         [[20, 20, 20],\n",
+       "          [19, 19, 19],\n",
+       "          [15, 15, 15],\n",
+       "          ...,\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16],\n",
+       "          [14, 14, 14]]], shape=(480, 480, 3), dtype=uint8)),\n",
+       " (np.int64(120786),\n",
+       "  array([[[16, 16, 16],\n",
+       "          [17, 17, 17],\n",
+       "          [18, 18, 18],\n",
+       "          ...,\n",
+       "          [19, 19, 19],\n",
+       "          [14, 14, 14],\n",
+       "          [18, 18, 18]],\n",
+       "  \n",
+       "         [[18, 18, 18],\n",
+       "          [17, 17, 17],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [14, 14, 14],\n",
+       "          [16, 16, 16],\n",
+       "          [16, 16, 16]],\n",
+       "  \n",
+       "         [[17, 17, 17],\n",
+       "          [16, 16, 16],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [17, 17, 17],\n",
+       "          [17, 17, 17]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[13, 13, 13],\n",
+       "          [13, 13, 13],\n",
+       "          [23, 23, 23],\n",
+       "          ...,\n",
+       "          [16, 16, 16],\n",
+       "          [16, 16, 16],\n",
+       "          [17, 17, 17]],\n",
+       "  \n",
+       "         [[14, 14, 14],\n",
+       "          [15, 15, 15],\n",
+       "          [20, 20, 20],\n",
+       "          ...,\n",
+       "          [21, 21, 21],\n",
+       "          [19, 19, 19],\n",
+       "          [15, 15, 15]],\n",
+       "  \n",
+       "         [[20, 20, 20],\n",
+       "          [19, 19, 19],\n",
+       "          [15, 15, 15],\n",
+       "          ...,\n",
+       "          [15, 15, 15],\n",
+       "          [16, 16, 16],\n",
+       "          [14, 14, 14]]], shape=(480, 480, 3), dtype=uint8))]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subtract_first_frame(frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_mouse(video_path, n_check_frames=4, diff_threshold=30, pixel_change_ratio=0.01):\n",
+    "    \"\"\"\n",
+    "    Detect whether a mouse appears in the first few frames of a video.\n",
+    "    \n",
+    "    Args:\n",
+    "        video_path: Path to video file\n",
+    "        n_check_frames: number of frames (after the first) to compare\n",
+    "        diff_threshold: pixel intensity threshold for considering a pixel changed\n",
+    "        pixel_change_ratio: fraction of pixels that must change to flag mouse presence\n",
+    "        \n",
+    "    Returns:\n",
+    "        (bool, list): (mouse_detected, list_of_differences)\n",
+    "    \"\"\"\n",
+    "    cap = cv2.VideoCapture(str(video_path))\n",
+    "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    \n",
+    "    if frame_count < n_check_frames + 1:\n",
+    "        print(f\"⚠️ Not enough frames in {video_path}\")\n",
+    "        return False, []\n",
+    "    \n",
+    "    # Read first frame (background)\n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
+    "    ret, base_frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"❌ Could not read base frame.\")\n",
+    "        return False, []\n",
+    "    base_gray = cv2.cvtColor(base_frame, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    diffs = []\n",
+    "    detected = False\n",
+    "    for i in range(1, n_check_frames + 1):\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES, i)\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            continue\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
+    "        # Compute absolute difference\n",
+    "        diff = cv2.absdiff(gray, base_gray)\n",
+    "        \n",
+    "        # Threshold the difference\n",
+    "        _, diff_bin = cv2.threshold(diff, diff_threshold, 255, cv2.THRESH_BINARY)\n",
+    "        \n",
+    "        # Calculate ratio of changed pixels\n",
+    "        ratio = np.sum(diff_bin > 0) / diff_bin.size\n",
+    "        \n",
+    "        diffs.append((i, diff, ratio))\n",
+    "        \n",
+    "        if ratio > pixel_change_ratio:\n",
+    "            detected = True\n",
+    "    \n",
+    "    cap.release()\n",
+    "    return detected, diffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
